i have made changes for get all my orders and admin:delete order